2004-08-19  Don Porter  <dgp@users.sourceforge.net>

	* tests/safe.test (safe-1.3):  Made test less sensitve to the
	full set of existing aliases in an interp, so the it only tests
	whether the tested ones are present.

	* unix/Makefile.in:	Copied LD_LIBRARY_PATH machinery from
	`make shell` target to other similar targets so that just built
	libraries are tested, rather than previous installations.

2004-08-19  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	TIP#168 IMPLEMENTATION

	* generic/tkTrig.c (TkMakeRawCurve, TkMakeRawCurvePostscript):
	* generic/tkInt.decls: New functions to handle the geometry for
	"raw" bezier curves.
	* generic/tkCanvUtil.c (tkRawSmoothMethod, InitSmoothMethods)
	(TkSmoothParseProc): Add new type of smoothing method, simplify
	the method initialization, and change the old smoothing method to
	be called "true" and just keep "bezier" as an alias.
	* tests/canvas.test (canvas-17.1): Basic test of built-in
	smoothing method support.
	* doc/canvas.n: Documentation updates.

2004-08-18  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkPanedWindow.c (optionSpecs): Add missing GEOMETRY flag
	to -handlepad option. [Bug 1010938]

2004-08-17  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/menu.n, doc/text.n: Assorted fixes, including spelling fixes
	from Mikhail Kolesnitschenko. [Patch 1010083]

	* doc/spinbox.n, doc/scrollbar.n, doc/scale.n, doc/panedwindow.n: 
	* doc/message.n, doc/listbox.n, doc/entry.n, doc/button.n:
	More spelling fixes from Mikhail Kolesnitschenko. [Patch 1010607]

2004-08-16  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/button.n, doc/checkbutton.n, doc/label.n, doc/menubutton.n:
	* doc/radiobutton.n: Added cross-reference to new standard option.
	* doc/options.n: Added standard documentation for the -compound
	option. [Bug 712588]

	* doc/canvas.n: Spelling and grammar fixes from Mikhail
	Kolesnitschenko. [Bug 1009636]

2004-08-11  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
