@@ -1,3 +1,9 @@
+2004-08-19  Joe English  <jenglish@users.sourceforge.net>
+
+	* unix/tkUnixWm.c:  Cast argument 7 of XChangeProperty to
+	'const unsigned char *' (from 'const char *') to satisfy
+	Solaris 8 Forte C compiler [Bug #1012325]
+
 2004-08-19  Don Porter  <dgp@users.sourceforge.net>
 
 	* tests/safe.test (safe-1.3):  Made test less sensitve to the
